# waterfall

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
kernel/src/api/: mod.rs
kernel/src/api/fs/: mod.rs
kernel/src/api/syscall/: mod.rs
kernel/src/sys/: acpi.rs  apic.rs  ata.rs  clock.rs  cmos.rs  cpu.rs  framebuffer.rs  gdt.rs  idt.rs  memory.rs  mod.rs  pic.rs  serial.rs  time.rs
kernel/src/sys/allocator/: fixed_size_block.rs  mod.rs
kernel/src/sys/syscall/: mod.rs  number.rs  service.rs
kernel/src/sys/task/: executor.rs  keyboard.rs  mod.rs
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs
