[package]
name = "waterfall"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.29", features = ["map_physical_memory"] }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
pc-keyboard = "0.7.0"
pic8259 = "0.11.0"
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.2.7"
x86_64 = "0.15.1"
