[package]
name = "waterfall"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11.7"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
members = ["kernel"]

[dependencies]
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
ovmf-prebuilt = "0.1.0-alpha.1"
