[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bit_field = "0.10.2"
bootloader_api = "0.11.7"
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3.30", default-features = false, features = [
    "alloc",
] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
noto-sans-mono-bitmap = { version = "0.3.0", default-features = false, features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials",
] }
num-traits = { version = "0.2.19", default-features = false }
pc-keyboard = "0.7.0"
pic8259 = "0.11.0"
raw-cpuid = "11.1.0"
spin = "0.9.8"
uart_16550 = "0.3.1"
uefi = "0.32.0"
x86_64 = "0.15.1"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
multiple_unsafe_ops_per_block = "warn"
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
