[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bit_field = "0.10.2"
bootloader_api = "0.11.9"
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
noto-sans-mono-bitmap = { version = "0.3.1", default-features = false, features = [
    "regular",
    "size_20",
    "unicode_ranges_all",
] }
num-traits = { version = "0.2.19", default-features = false }
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
raw-cpuid = "11.2.0"
spin = "0.9.8"
uart_16550 = "0.3.2"
uefi = "0.33.0"
x86_64 = "0.15.2"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_unsafe_ops_per_block = "warn"
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
